fixed pointer event issue when popup is collapsed

--- a/src/sass/app_2/_common/contracts_popup.scss
+++ b/src/sass/app_2/_common/contracts_popup.scss
@@ -44,6 +44,7 @@ div.contracts-popup-container {
         top: 100%;
         max-height: 100%;
         opacity: 1;
+        pointer-events: auto;
     }
     &.show > .clicked {
         border-color: #2a3052;
@@ -56,6 +57,7 @@ div.contracts-popup-container {
         left: 0;
         top: 50%;
         width: 100%;
+        pointer-events: none;
         position: absolute;
         transition: all 0.3s ease 0.15s;
         opacity: 0;
